# surfpack

./: CMakeLists.txt  INSTALL  README
docs/: Dev_Main.dox  DoxygenConfig  README_Surfpack_Manual  bigbox.sty  elsart-num.bst  surfpack_users_manual.bib  surfpack_users_manual.tex
docs/GettingStarted/: conventions.txt  create_axes.txt  create_sample.txt  create_surface.txt  evaluate.txt  fitness.txt  load.txt  pop_est.spd  save.txt  world_poly.sps  world_pop.spd
docs/Installation/: configure_prefix.txt  configure_with_cppunit.txt
docs/TimingMatrixOp/: create_surface.txt  cubic_poly.txt  evaluate_and_save.txt  fitness_output.txt  load.txt  press_rsquared_results.txt  scaled_poly3.txt  test_data_extract.txt  test_timing_data.spd  timing.spk  timing3050.txt  timing_data_extract.txt  timing_poly2.sps  timing_poly2.txt  timing_poly2_extract.txt  timing_poly3.txt
examples/BasketballSalaries/: salaries.spd  salaries.spk
examples/CInterface/: CMakeLists.txt  eval_model.c  make.sh
examples/Engineering4D/: ccd.spk  test_data.spd
examples/FluidDynamics/: cfd.spd  cfd.spk  gnuplot_engineering  test_data.spd
examples/GettingStarted/: getting_started.spk
examples/MartianTopology/: gnuplot_results  mars_terrain.spk  n26e171.spd  n26e171dense.spd
examples/MatlabPeaks/: matlab_peaks.spd  peaks.spk  test_data.spd
examples/SamplingTechniques/: rosenbrock_lhs_25.spd  rosenbrock_oas_25.spd  rosenbrock_random_25.spd
examples/TestScores/: sat_scores.spd  sat_scores.spk  sat_scores2.spk  what_ifs.spd
examples/TimingMatrixOp/: ktimes.spk  one_trial_3050to5000.spd  scaled_poly3.spk  test_timing_data.spd
examples/ValidationData/: Overall_GP_comparison.xls  grad_paviani10d_10K.spd  grad_paviani10d_2500.spd  grad_paviani10d_50.spd  grad_paviani10d_500.spd  grad_validate2d_10.spd  grad_validate2d_100.spd  grad_validate2d_10K.spd  grad_validate2d_500.spd  paviani10d_10K.spd  paviani10d_2500.spd  paviani10d_50.spd  paviani10d_500.spd  validate2d_10.spd  validate2d_100.spd  validate2d_10K.spd  validate2d_500.spd
gui/: Makefile  README  firstswig.cxx  firstswig.h  firstswig.i  firstswig.py  mymake  plotter.py  runme.py  spgui.cpp  template
interface/: CMakeLists.txt  main.cpp
src/: AxesBounds.cpp  AxesBounds.h  CMakeLists.txt  Conmin.cpp  Conmin.h  MersenneTwister.h  ModelFactory.cpp  ModelFactory.h  ModelFitness.cpp  ModelFitness.h  SurfData.cpp  SurfData.h  SurfPoint.cpp  SurfPoint.h  SurfpackInterface.cpp  SurfpackInterface.h  SurfpackMatrix.cpp  SurfpackMatrix.h  SurfpackParserArgs.cpp  SurfpackParserArgs.h  surfpack.cpp  surfpack.h  surfpack_LAPACK_wrappers.h  surfpack_c_interface.cpp  surfpack_c_interface.h  surfpack_system_headers.h
src/interpreter/: CMakeLists.txt  FlexWrapper.cpp  FlexWrapper.h  SurfpackInterpreter.cpp  SurfpackInterpreter.h  SurfpackParser.cpp  SurfpackParser.h  lexer.c  lexer.l  surfparse.cpp  surfparse.hpp  surfparse.ypp
src/mars/: CMakeLists.txt  mars36_fort.f  mars36_sample.f
src/surfaces/: CMakeLists.txt  DirectANNModel.cpp  DirectANNModel.h  KrigingModel.cpp  KrigingModel.h  LinearRegressionModel.cpp  LinearRegressionModel.h  MarsModel.cpp  MarsModel.h  ModelScaler.cpp  ModelScaler.h  MovingLeastSquaresModel.cpp  MovingLeastSquaresModel.h  RadialBasisFunctionModel.cpp  RadialBasisFunctionModel.h  SurfpackModel.cpp  SurfpackModel.h  least_squares_omp.cpp  least_squares_omp.h
src/surfaces/nkm/: CMakeLists.txt  NKM_BlockPivotChol.f  NKM_KrigingModel.cpp  NKM_KrigingModel.hpp  NKM_Optimize.cpp  NKM_Optimize.hpp  NKM_PivotChol.f  NKM_SurfData.cpp  NKM_SurfData.hpp  NKM_SurfMat.cpp  NKM_SurfMat.hpp  NKM_SurfMat_Native.hpp  NKM_SurfMat_Teuchos.hpp  NKM_SurfPack.cpp  NKM_SurfPack.hpp  NKM_SurfPackModel.cpp  NKM_SurfPackModel.hpp  NKM_TestMain.cpp  NKM_ValidateMain.cpp
system_tests/: Makefile.am
system_tests/axes/: axis01.axb  axis02.axb  test002_01.axb  test002_02.axb  test007_01.axb  test007_02.axb
system_tests/instances/: Makefile.am  ktimes.spk  sensor.spk  test001.spk  test002.spk  test003.spk  test005.spk  test006.spk  test007.spk  test008.spk  test009.spk  test010.spk  time_krig_builds.cpp  update
system_tests/perm_data/: ccd_lhs_4d_41p.spd  clustered_2d_48p.spd  krigtimes_50to3000.spd  mean_time_between_failures.spd  sensor_1d.spd  seventeen_1d.spd  too_many.spd  zonk_1d_24p.spd  zonk_1d_47p.spd
tests/: KrigingModelTest.cpp  KrigingModelTest.h  LinearRegressionModelTest.cpp  LinearRegressionModelTest.h  Makefile.am  ModelFactoryTest.cpp  ModelFactoryTest.h  ModelScalerTest.cpp  ModelScalerTest.h  MovingLeastSquaresTest.cpp  MovingLeastSquaresTest.h  RadialBasisFunctionTest.cpp  RadialBasisFunctionTest.h  SurfDataTest.cpp  SurfDataTest.h  SurfPointTest.cpp  SurfPointTest.h  SurfpackCommonTest.cpp  SurfpackCommonTest.h  SurfpackModelTest.cpp  SurfpackModelTest.h  addunittest  srftestmain.cpp  unittests.cpp  unittests.h
tests/SaveLoad/: ccd_load.spk  ccd_save.spk  testsaveload.sh
working/: .restart
